--- a/styles/index.css
+++ b/styles/index.css
@@ -3,3 +3,10 @@
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
+
+.sticky {
+	position: sticky !important;
+	position: -webkit-sticky !important;
+	z-index: 100;
+	top: 10px;
+}
